<resources>
    <string name="app_name">Clickinn</string>
    <string name="money_symbol">R</string>
    <string name="title_activity_accom_view">AccomView</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="accom_price">R 1020.67</string>
    <string name="no_connection_error">Please connect to the internet before trying to view available accommodations.
    </string>

    <string name="books_prices_terms">Classfinder++ will find you a buyer and arrange a meeting between you and
        the buyer(Within designated times). A Classfinder representative will be present to broker the trade.
        The meeting point for trade is at any convenient spot on the campus(Library or convenience stores). The
        following are the fees payable to Classfinder according to the text book price
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_enter_start_price">Enter start price</string>
    <string name="search_enter_limit_price">Enter limit price</string>
    <string name="search_accommodation">Search for accommodation</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_networks">Classfinder Networks</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This studentEmail address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing studentEmail
        completions."
    </string>
    <string name="title_activity_tabbed">Tabbed</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_runner">Runner</string>
    <string name="runner_panel">Panel</string>
    <string name="action_string_sign_out">Log out</string>
    <string name="title_activity_new_accommodation">Add New Accommodation</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="title_activity_books_list">All Books</string>
    <string name="books_prices">
        R10 for textbooks between the price range R100-R300 \n
        R20 for textbooks between the price range R301-R600 \n
        R30 for textbooks between the price range R601-R900 \n
        R40 for textbooks between the price range R901-R1200 \n
    </string>
    <string name="books_meetup_times_lables">The times of meetup are and place is infront of the library</string>
    <string name="books_meetup_times">
        \n
        07:00-8:00\n
        13:00-14:00\n
        16:00-17:00\n
    </string>
    <string name="title_activity_house">HouseActivity</string>
    <string name="title_activity_host_panel">HostPanel</string>
</resources>
