<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView android:layout_width="wrap_content"
                  android:text="@string/books_prices_terms"
                  android:layout_height="wrap_content"/>

        <TextView android:layout_width="match_parent"
                  android:layout_marginTop="10dp"
                  android:textStyle="bold"
                  android:text="@string/books_prices"
                  android:layout_height="wrap_content"/>

        <TextView android:layout_width="match_parent"
                  android:layout_marginTop="10dp"
                  android:layout_marginBottom="10dp"
                  android:background="#bdbdbd"
                  android:layout_height="1dp"/>

        <TextView android:layout_width="wrap_content"
                  android:text="@string/books_meetup_times_lables"
                  android:layout_height="wrap_content"/>

        <TextView android:layout_width="match_parent"
                  android:layout_marginTop="10dp"
                  android:textStyle="bold"
                  android:layout_marginLeft="15dp"
                  android:text="@string/books_prices"
                  android:layout_height="wrap_content"/>

        <TextView android:layout_width="match_parent"
                  android:layout_marginTop="10dp"
                  android:layout_marginBottom="10dp"
                  android:background="#bdbdbd"
                  android:layout_height="1dp"/>
    </LinearLayout>
</ScrollView>
