<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="za.co.metalojiq.classfinder.someapp.activity.Search">

    <Button
        android:text="@string/search_accommodation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_search"
        style="@style/Widget.AppCompat.Button"
        android:visibility="visible"
        android:onClick="search"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/holo_green_light"/>

    <Spinner
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:id="@+id/search_location_spinner"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/search_tv_room_type"
        android:layout_toEndOf="@+id/search_tv_room_type" />

    <TextView
        android:text="Location:"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/search_tv_location"
        android:textSize="20sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="Room Type:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/search_tv_room_type"
        android:textSize="20sp"
        android:layout_below="@+id/search_location_spinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="23dp" />

    <Spinner
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/search_spinner_room_type"
        android:layout_alignTop="@+id/search_tv_room_type"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        />

    <TextView
        android:text="Auckland Park Areas:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/search_tv_auck_areas"
        android:textSize="20sp"
        android:layout_below="@id/search_spinner_room_type"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="23dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:layout_below="@+id/search_tv_auck_areas"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="14dp"
        android:hint="@string/search_enter_start_price"

        android:id="@+id/search_price_from"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/search_enter_limit_price"
        android:ems="10"
        android:layout_marginTop="13dp"
        android:id="@+id/search_price_to"
        android:layout_below="@+id/search_price_from"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:id="@+id/search_spinner_auck_areas"
        android:layout_above="@+id/search_price_from"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
