<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="za.co.metalojiq.classfinder.someapp.activity.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

    <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <AutoCompleteTextView
                        android:id="@+id/signUpName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Enter YourName"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <AutoCompleteTextView
                        android:id="@+id/signUpEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/signUpPhoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_phone_number"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/signUpPassWord"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/signUpConfirmPassWord"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Confirm Password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal"
                          android:id="@+id/signUpRunnerTime"
            >
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_marginEnd="4dp"
                          android:text="Wanna be an Accommodation Assitant? "
                          android:layout_marginRight="4dp"/>


                <ImageButton
                        android:id="@+id/signUpHelpBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        app:srcCompat="@drawable/ic_help_outline_black_24dp"
                        android:contentDescription="know more about accommodation assitant"/>

                <CheckBox
                        android:id="@+id/signUpIsRunner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:baselineAlignBottom="true"
                />
            </LinearLayout>

            <TextView android:layout_width="wrap_content"
                      android:text="Select Your assistant times "
                      android:id="@+id/signUpTvSelectTime"
                      android:layout_height="wrap_content"/>
            <!--The layout for runner user-->
            <HorizontalScrollView android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:id="@+id/SignUpHorizontalTimes"
            >
                <LinearLayout android:layout_width="match_parent"
                              android:orientation="horizontal"
                              android:layout_height="wrap_content">
                    <TextView android:layout_width="wrap_content"
                              android:text="08:00"
                              android:layout_height="wrap_content"
                              android:id="@+id/tvTime8"
                    />

                    <CheckBox android:layout_width="wrap_content"
                              android:id="@+id/signUpRadio8"
                              android:layout_height="wrap_content"
                    />

                    <TextView android:layout_width="wrap_content"
                              android:layout_below="@id/tvTime8"
                              android:text="10:00"
                              android:layout_height="wrap_content"
                              android:id="@+id/tvTime10"
                    />
                    <CheckBox android:layout_width="wrap_content"
                              android:id="@+id/signUpRadio10"
                              android:layout_below="@id/tvTime10"
                              android:layout_height="wrap_content"
                    />

                    <TextView android:layout_width="wrap_content"
                              android:layout_below="@id/tvTime10"

                              android:paddingRight="5dp"
                              android:text="14:00"
                              android:layout_height="wrap_content"
                              android:id="@+id/tvTime12"
                    />
                    <CheckBox android:layout_width="wrap_content"
                              android:id="@+id/signUpRadio12"
                              android:layout_height="wrap_content"
                              android:layout_below="@id/tvTime12"
                    />

                    <TextView android:layout_width="wrap_content"
                              android:layout_below="@id/tvTime12"
                              android:layout_height="wrap_content"
                              android:id="@+id/tvTime14"
                              android:paddingRight="5dp"
                              android:text="14:00"
                    />
                    <CheckBox android:layout_width="wrap_content"
                              android:id="@+id/signUpRadio14"
                              android:layout_height="wrap_content"
                              android:layout_below="@id/tvTime14"
                    />

                    <TextView android:layout_width="wrap_content"
                              android:layout_below="@id/tvTime14"

                              android:layout_height="wrap_content"
                              android:text="16:00"
                              android:paddingRight="5dp"
                              android:id="@+id/tvTime16"
                    />
                    <CheckBox android:layout_width="wrap_content"
                              android:id="@+id/signUpRadio16"
                              android:layout_below="@id/tvTime16"
                              android:layout_height="wrap_content"
                    />
                </LinearLayout>

            </HorizontalScrollView>
            <TextView android:layout_width="wrap_content"
                      android:text="Select Your assistant location "
                      android:id="@+id/signUpSelectTime"
                      android:layout_height="wrap_content"/>
            <Spinner android:layout_width="wrap_content"
                     android:id="@+id/signUpSpinnerTime"
                     android:layout_height="wrap_content">
            </Spinner>

            <Button
                    android:id="@+id/signUpBtn"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="Sign up"
                    android:textStyle="bold" />
            <Button
                    android:id="@+id/signUpLogin"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/title_activity_login"
                    android:textStyle="bold" />
        </LinearLayout>

    </ScrollView>
</LinearLayout>
